--- a/src/Components/Header/Navbar.scss
+++ b/src/Components/Header/Navbar.scss
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    a{
+      text-decoration: none !important;
+    }
   }
   
   .container {
@@ -216,6 +218,10 @@
     position: absolute; 
     top: 40%; 
     left:4px; 
+    a{
+      text-decoration: none;
+      color: #000;
+    }
 }
 
 @media (max-width: 968px) {
@@ -232,7 +238,10 @@
         background:0;
         gap: 80px;
         z-index: 100;
-
+        a{
+          text-decoration: none;
+          color: #000;
+        }
         svg{
             background-color: #fff;
         }
@@ -254,6 +263,10 @@
         background:0;
         gap: 50px;
         z-index: 100;
+        a{
+          text-decoration: none;
+          color: #000;
+        }
     }
 }
 
@@ -435,3 +448,59 @@
 }
 
 /// contact end
+
+
+
+#footer{
+  background: #000;
+
+  footer{
+    background: #000;
+    color: #fff;
+    height: 300px;
+    padding:50px;
+
+
+      .txtss{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 50px;
+        h3{
+          font-size: 32px;
+        }
+        p{
+          padding-top: 25px
+      }
+
+      .social{
+       h3{
+        padding-bottom: 10px;
+       }
+       a{
+        text-decoration: none;
+        color: #fff;
+       }
+        span{
+          padding: 5px;
+          font-size: 26px;
+        }
+      }
+  }
+  }
+  .lime{
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    margin-top: 50px;
+  }
+
+  #copyright{
+    text-align: center;
+    padding-top: 20px;
+    a{
+      color: #fff;
+    }
+  }
+}
