--- a/src/Components/Header/Navbar.scss
+++ b/src/Components/Header/Navbar.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -5,6 +8,9 @@
     a{
       text-decoration: none !important;
     }
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
   
   .container {
@@ -29,9 +35,11 @@
       height: 60px;
       padding-top: 10px;
   
-      .nav__logo img {
-        width: 40px;
-        height: 40px;
+      .nav__logo {
+        img{
+         font-size: 52px;
+        }
+      
       }
   
       .nav__logo a {
@@ -222,10 +230,14 @@
       text-decoration: none;
       color: #000;
     }
-}
 
+}
+.iconhero{
+  background: #fff;
+
+}
 @media (max-width: 968px) {
-    .hero__icons {  
+    .iconhero {  
         position: fixed;
         bottom: 0;
         display: flex;
@@ -236,29 +248,33 @@
         left: 45%;
         top: 90%;
         background:0;
+        background: #fff;
+        // height: 50px;
         gap: 80px;
         z-index: 100;
         a{
           text-decoration: none;
           color: #000;
         }
-        svg{
-            background-color: #fff;
-        }
-         
     }
-}
+          h3 {
+          font-size: 42px;
+          font-weight: 600;
+      }
+    }
 
-@media (max-width: 968px) {
-    .hero__icons {  
+
+@media (max-width:768px) {
+    .iconhero {  
         position: fixed;
         bottom: 0;
         display: flex;
         align-items: center;
+        background: #fff;
         justify-content: center;
         flex-direction: row;
         text-align: center;
-        left: 45%;
+        left: 15%;
         top: 90%;
         background:0;
         gap: 50px;
@@ -268,6 +284,36 @@
           color: #000;
         }
     }
+    h3 {
+      font-size: 32px;
+      font-weight: 600;
+  }
+}
+
+@media (max-width: 508px) {
+    .iconhero {  
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        background: #fff;
+        justify-content: center;
+        flex-direction: row;
+        text-align: center;
+        left: 15%;
+        top: 90%;
+        background:0;
+        gap: 50px;
+        z-index: 100;
+        a{
+          text-decoration: none;
+          color: #000;
+        }
+    }
+    h3 {
+      font-size: 22px;
+      font-weight: 600;
+  }
 }
 
 
@@ -311,15 +357,17 @@
     }
    }
 .btnsskil{
- 
+ max-width: 600px;
+ width: 100%;
   button{
-    color: #fff;
-    background: #000;
+    color: #000;
+    background: #fff;
     padding: 8px 10px;
     border-radius: 5px;
     margin-top: 20px;
     margin: 20px;
     font-size: 24px;
+    border: 1px solid rgb(225, 225, 225);
       &:hover{
         transform: rotate(10deg);
 
@@ -504,3 +552,5 @@
     }
   }
 }
+
+
